--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,28 +13,36 @@
     
   </div>
   <!-- Add Tasks -->
-  <div class="col-md-6">
+  <div class="col-md-6 add-task">
     <h3 class="text-center">Añadir tarea</h3>
-    <form class="mt-3">
+    <form class="mt-3"
+          autocomplete="off"
+          (ngSubmit)="crearTarea()"
+          [formGroup]="taskForm">
       <div class="form-floating mb-3">
         <input type="text" 
                class="form-control"
                id="input-nombre-tarea" 
-               placeholder="name@example.com">
+               placeholder="Ir al supermercado"
+               formControlName="task-description"
+               required>
                <!-- [ngClass]="{'is-invalid': true}"  -->
         <label for="input-nombre-tarea">Descripción de la tarea</label>
       </div>
-      <span class="text-danger">La descripción de la tarea es obligatorio.</span>
-      <div class="form-floating mb-3">
+      <span class="text-danger"
+            *ngIf="isNotValidControl('task-description')">La descripción de la tarea es obligatorio. (min. 3 caracteres)</span>
+      <div class="form-floating mb-3 date-input">
         <input type="date" 
                class="form-control"
+               [min]="2023-05-03"
+               formControlName="task-date"
                id="input-fecha-tarea">
           <label for="input-fecha-tarea">Fecha límite de la tarea</label>
-               <!-- [min]="getDate()"> -->
       </div>
-
-      <button class="btn btn-primary">Crear tarea</button>
-
+      <span class="text-danger"
+            *ngIf="isNotValidControl('task-date')">La descripción de la tarea es obligatorio.</span>      
+      <button class="btn btn-primary" 
+              type="submit">Crear tarea</button>
     </form>
   </div>
 </div>
