--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,6 @@
   </div>
 </div>
 
-<!-- Task manager -->
 <div class="row my-4">
   <!-- Show Tasks -->
   <div class="col-md-6">
@@ -25,12 +24,14 @@
       <h3>Tus tareas:</h3>
     </ng-template>
   </div>
+
+
   <!-- Add Tasks -->
   <div class="col-md-6 add-task">
     <h3 class="text-center">Añadir tarea</h3>
     <form class="mt-3"
           autocomplete="off"
-          (ngSubmit)="crearTarea()"
+          (ngSubmit)="createTask()"
           [formGroup]="taskForm">
       <div class="form-floating mb-3">
         <input type="text" 
