--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -6,6 +6,6 @@
       {{ task['task-description'] }}
     </p>
     <p class="card-text">Fecha: {{ task['task-date']}}</p>
-    <a class="btn btn-danger" (click)="eliminarTarea(task._id)">Go somewhere</a>
+    <a class="btn btn-danger" (click)="eliminarTarea(task['_id'])">Eliminar</a>
   </div>
 </div>
