Update Deleted index input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,7 @@
       <h3>Tus tareas:</h3>
       <div class="task mt-4"
            *ngFor="let task of taskSrv.tasks; let i = index">
-        <app-task-item [index]="i + 1"
-                       [task]="task"></app-task-item>
+        <app-task-item [task]="task"></app-task-item>
       </div>
     </ng-template>
   </div>
