--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 18rem;">
   <div class="color"></div>
   <div class="card-body">
-    <h5 class="card-title">Task {{ index }}.</h5>
+    <h5 class="card-title">{{ task['_id'] }}</h5>
     <p class="card-text">
       {{ task['task-description'] }}
     </p>
