--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   <div class="col-md-6">
     <!-- No Tasks -->
     <div class="no-tasks"
-         *ngIf="taskSrv.tasks.length === 0; else tasksContainer">
+         *ngIf="taskSrv.tasks.length === 0 && !isSearching; else tasksContainer">
         <div class="alert alert-warning" role="alert">
           No tienes tareas creadas.
         </div>
@@ -22,6 +22,12 @@
     <!-- Render tasks -->
     <ng-template #tasksContainer>
       <h3>Tus tareas:</h3>
+      <hr>
+      <input type="text" 
+             class="form-control"
+             placeholder="Buscar tarea"
+             #searchInput
+             (keyup)="searchTask(searchInput.value)">
       <div class="task mt-4"
            *ngFor="let task of taskSrv.tasks; let i = index">
         <app-task-item [task]="task"></app-task-item>
@@ -33,6 +39,7 @@
   <!-- Add Tasks -->
   <div class="col-md-6 add-task">
     <h3 class="text-center">Añadir tarea</h3>
+    <hr>
     <form class="mt-3"
           autocomplete="off"
           (ngSubmit)="createTask()"
