--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -9,7 +9,7 @@
       <input class="form-check-input" 
              type="checkbox" 
              role="switch" 
-             [checked]="!task['isDone']"
+             [checked]="task['isDone']"
              (change)="updateStatus()">
       <label [ngClass]="getClassByStatus()">
             {{ task['isDone'] ? 'Completada' : 'Pendiente' }}
