--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem; margin: 0 auto">
   <div class="color"></div>
   <div class="card-body">
     <h6 class="card-title">{{ task['_id'] }}</h6>
